add some features

--- a/client/index.html
+++ b/client/index.html
@@ -11,8 +11,9 @@
 </head>
 <body>
     <div id="app">
-        <navbar></navbar>
-        <todo-list></todo-list>
+        <navbar @status="changeStatus" @input-task="newTask"></navbar>
+        <create-task v-if="task" @task-done="removeTask"></create-task>
+        <todo-list :status="status" :task="task"></todo-list>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
