--- a/client/index.html
+++ b/client/index.html
@@ -11,10 +11,11 @@
 </head>
 <body>
     <div id="app">
-        <navbar class="nav" @status="changeStatus" @input-task="newTask"></navbar>
+        <navbar class="nav" @status="changeStatus" @input-task="newTask" @register="registerForm"></navbar>
         <create-task v-if="task" @task-done="removeTask"></create-task>
         <todo-list v-if="!updateTask" @update="update" :status="status" :task="task"></todo-list>
         <edit-task v-if="updateTask" :task="updateTask" @done-update="done"></edit-task>
+        <register v-if="register" :register="register" @close="register = false"></register>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
